--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "axios": "^1.7.2",
     "busboy": "^1.6.0",
     "formidable": "^3.5.1",
+    "multer": "1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "next": "14.2.4",
+    "next-connect": "^1.0.0",
     "raw-body": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.11",
+    "@types/multiparty": "^0.0.36",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
